--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
         <div class="content">
             <h1>Our Travel Packages</h1>
             <p>Explore our wide range of travel packages designed to suit every traveler's needs. From adventure trips to relaxing beach holidays, we have it all.</p>
+            <div class="packages">
+                <div class="package">
+                    <h2>Beach Holiday</h2>
+                    <p>Relax by the sea with our all-inclusive beach holiday package.</p>
+                </div>
+                <div class="package">
+                    <h2>Adventure Trip</h2>
+                    <p>Get your adrenaline pumping with our thrilling adventure trips.</p>
+                </div>
+                <div class="package">
+                    <h2>City Tour</h2>
+                    <p>Discover the hidden gems of the city with our guided city tours.</p>
+                </div>
+                <div class="package">
+                    <h2>Cultural Experience</h2>
+                    <p>Immerse yourself in local cultures with our cultural experience packages.</p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="Contact">
